--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Count - Slides</title>
+    <title>Вартовий</title>
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Вартовий">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -48,38 +48,36 @@
         <div class="home-content">
 
             <div class="home-logo">
-                <a href="index-slides.html">
-                    <img src="images/logo.svg" alt="Homepage">
+                <a href="/">
+                    <img src="logo_original.png" style="height: 64px !important; width: 64px !important" alt="Homepage">
                 </a>
             </div>
 
             <div class="row home-content__main">
 
                 <div class="col-eight home-content__text pull-right">
-                    <h3>Welcome to Count</h3>
+                    <h3>Вітаємо на сторінці проєкту "Вартовий"</h3>
 
                     <h1>
-                    We are currently working <br>
-                    on a new super awesome <br> website.
+                    Ми працюємо над <br>
+                    розробкою проєкту "Вартовий" <br> website.
                     </h1>
 
-                    <p>
-                    Nulla porttitor accumsan tincidunt. Nulla quis lorem ut libero malesuada feugiat. 
-                    Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
-                    Pellentesque in ipsum id orci porta dapibus. Nulla quis lorem ut libero malesuada feugiat.
+                    <p style="color: #fff">
+                    "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, а також навчання дії населення у разі виникнення надзвичайних ситуацій
                     </p>
 
                     <div class="home-content__subscribe">
                         <form id="mc-form" class="group" novalidate="true">
                             <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-                            <input type="submit" name="subscribe" value="Notify Me">
+                            <input type="submit" name="subscribe" value="Сповістити мене">
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
                     </div>
                 </div>  <!-- end home-content__text -->
 
                 <div class="col-four home-content__counter">
-                    <h3>Launching In</h3>
+                    <h3>Запуск через</h3>
 
                     <div class="home-content__clock">
                         <div class="top">
@@ -124,7 +122,7 @@
             </ul> <!-- end home-social -->
 
             <div class="row home-copyright">
-                <span>Copyright Count 2018</span> 
+                <span>&copy; 2023 Проєкт "Вартовий". Усі права захищено</span> 
                 <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
             </div> <!-- end home-copyright -->
 
