--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="col-eight home-content__text pull-right">
                     <h3>Вітаємо на сторінці проєкту "Вартовий"</h3>
 
-                    <h1>
+                    <h1 style="font-family: Open Sans;">
                     Ми працюємо над <br>
                     розробкою проєкту "Вартовий" <br> website.
                     </h1>
@@ -68,6 +68,9 @@
                     </p>
 
                     <div class="home-content__subscribe">
+                        <p>
+                            <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/13bf1d9ad5e7bb3c2384195d6/2ec20db1599c8b3617c6a9148.js");</script>
+                        </p>
                         <form id="mc-form" class="group" novalidate="true">
                             <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
                             <input type="submit" name="subscribe" value="Сповістити мене">
