--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                     <h3>Вітаємо на сторінці проєкту "Вартовий"</h3>
 
                     <h1 style="font-family: Open Sans;">
-                    Ми працюємо над <br>
-                    розробкою проєкту "Вартовий" <br> website.
+                    Ми працюємо над розробкою проєкту "Вартовий"
                     </h1>
 
                     <p style="color: #fff">
@@ -148,7 +147,7 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>We are Count. We make awesome stuff.</h1>
+                <h1>Про проєкт "Вартовий"</h1>
                 <p>
                 Quisque velit nisi, pretium ut lacinia in, elementum id enim. Mauris blandit aliquet elit, 
                 eget tincidunt nibh pulvinar a. Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
@@ -167,25 +166,18 @@
             <div class="col-four tab-full pull-right info-contact">
 
                 <div class="info-block">
-                    <h3>Start A Conversation</h3>
+                    <h3>Контакти</h3>
                     <p>
-                        <a href="mailto:#0" class="info-email">mailus@ourwebsite.com</a><br>
-                        <a href="tel:+18587338912" class="'info-phone">+1.858.733.8912</a>
+                        Юрій Клебан<br>
+                        <a href="mailto:#0" class="info-email">yura@cityguard.info</a><br>
+                        <br>
+                        Антон Бочаров<br>
+                        <a href="mailto:#0" class="info-email">anton@cityguard.info</a><br>
                     </p>
                 </div>
 
                 <div class="info-block">
-                    <h3>Visit Our Office</h3>
-                    
-                    <p class="info-address">
-                        1600 Amphitheatre Parkway<br>
-                        Mountain View, CA<br>
-                        94043 US
-                    </p>
-                </div>
-
-                <div class="info-block">
-                    <h3>Find Us On</h3>
+                    <h3>Ми у соц. мережах</h3>
                     
                     <ul class="info-social">
                         <li>
