--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Вартовий</title>
-    <meta name="description" content="">
+    <meta name="description" content="cистема для розробки планів евакуації населених пунктів та районів, а також навчання дії населення у разі виникнення надзвичайних ситуацій">
     <meta name="author" content="Вартовий">
 
     <!-- mobile specific metas
