--- a/index.html
+++ b/index.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
-    <title>Вартовий</title>
+    <title>Вартовий - cистема для розробки планів евакуації населених пунктів та районів</title>
     <meta name="description" content="cистема для розробки планів евакуації населених пунктів та районів, а також навчання дії населення у разі виникнення надзвичайних ситуацій">
     <meta name="author" content="Вартовий">
-
-    <!-- mobile specific metas
-    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- CSS
-    ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
-
-    <!-- script
-    ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
-    <!-- favicons
-    ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -147,19 +132,19 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>Про проєкт "Вартовий"</h1>
+                <h1 style="font-family: Open Sans;">Про проєкт "Вартовий"</h1>
                 <p>
-                Quisque velit nisi, pretium ut lacinia in, elementum id enim. Mauris blandit aliquet elit, 
-                eget tincidunt nibh pulvinar a. Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
-                Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
+                Вартовий - це система для розробки планів евакуації населених пунктів та районів, а також навчання населення у разі виникнення надзвичайних ситуацій
                 </p>
 
                 <p>
-                Officiis nostrum adipisci minima. Enim tenetur animi ipsum a itaque temporibus necessitatibus. 
-                Dolores ad perspiciatis. Voluptatem et molestiae adipisci laboriosam assumenda. Deleniti vero 
-                labore eos repudiandae. Vel commodi tenetur ex quia. Quisque velit nisi, pretium ut lacinia in, 
-                elementum id enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere.
+               <img src="images/map0.png" alt="" />
+                </p>
+                <p>
+               <img src="images/map1.png" alt="" />
+                </p>
+                <p>
+               <img src="images/map2.png" alt="" />
                 </p>
             </div>
 
