--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1 style="font-family: Open Sans;">Про проєкт "Вартовий"</h1>
+                <h1 style="font-family: Open Sans; font-size: 18px">Про проєкт "Вартовий"</h1>
                 <p>
                 Вартовий - це система для розробки планів евакуації населених пунктів та районів, а також навчання населення у разі виникнення надзвичайних ситуацій
                 </p>
