--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="col-eight home-content__text pull-right">
                     <h3>Вітаємо на сторінці проєкту "Вартовий"</h3>
 
-                    <h1 style="font-family: Open Sans;">
+                    <h1 style="font-family: Open Sans; font-size: 24px">
                     Ми працюємо над розробкою проєкту "Вартовий"
                     </h1>
 
@@ -51,6 +51,10 @@
                     "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, а також навчання дії населення у разі виникнення надзвичайних ситуацій
                     </p>
 
+                    <p>
+                        <img src="images/map2.png" alt="" />
+                    </p>
+<!--
                     <div class="home-content__subscribe">
                         <p>
                             <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/13bf1d9ad5e7bb3c2384195d6/2ec20db1599c8b3617c6a9148.js");</script>
@@ -61,7 +65,7 @@
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
                     </div>
-                </div>  <!-- end home-content__text -->
+                </div>  -->
 
                 <div class="col-four home-content__counter">
                     <h3>Запуск через</h3>
@@ -107,7 +111,7 @@
                 <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a>
                 </li>
             </ul> <!-- end home-social -->
-
+            
             <div class="row home-copyright">
                 <span>&copy; 2023 Проєкт "Вартовий". Усі права захищено</span> 
                 <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
@@ -154,10 +158,10 @@
                     <h3>Контакти</h3>
                     <p>
                         Юрій Клебан<br>
-                        <a href="mailto:#0" class="info-email">yura@cityguard.info</a><br>
+                        <a href="mailto:yura@cityguard.info" class="info-email">yura@cityguard.info</a><br>
                         <br>
                         Антон Бочаров<br>
-                        <a href="mailto:#0" class="info-email">anton@cityguard.info</a><br>
+                        <a href="mailto:anton@cityguard.info" class="info-email">anton@cityguard.info</a><br>
                     </p>
                 </div>
 
