--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
                     <p style="color: #fff">
                     "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, а також навчання дії населення у разі виникнення надзвичайних ситуацій
-                    </p>
+                   
+                        <img style="width: 70%;"  src="images/map2.png" alt="" />
+                </p>
 
-                    <p>
-                        <img src="images/map2.png" alt="" />
-                    </p>
+                   
 <!--
                     <div class="home-content__subscribe">
                         <p>
