--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
                 <div class="col-eight home-content__text pull-right">
                     <h3>Вітаємо на сторінці проєкту "Вартовий"</h3>
 
-                    <h1 style="font-family: Open Sans; font-size: 24px">
+                    <h1 style="font-family: Open Sans; font-size: 27px">
                     Ми працюємо над розробкою проєкту "Вартовий"
                     </h1>
 
                     <p style="color: #fff">
                     "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, 
-                    а також навчання дії населення у разі виникнення надзвичайних ситуацій.  
-                </p>
+                    а також навчання дії населення у разі виникнення надзвичайних ситуацій.
+                    </p>
 
-                   
-<!--
                     <div class="home-content__subscribe">
                         <p>
                             <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/13bf1d9ad5e7bb3c2384195d6/2ec20db1599c8b3617c6a9148.js");</script>
@@ -64,7 +62,7 @@
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
                     </div>
-                </div>  -->
+                </div>  <!-- end home-content__text -->
 
                 <div class="col-four home-content__counter">
                     <h3>Запуск через</h3>
