--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     а також навчання дії населення у разі виникнення надзвичайних ситуацій.
                     </p>
 
-                    <div class="home-content__subscribe">
+                   <!-- <div class="home-content__subscribe">
                         <p>
                             <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/13bf1d9ad5e7bb3c2384195d6/2ec20db1599c8b3617c6a9148.js");</script>
                         </p>
@@ -61,7 +61,7 @@
                             <input type="submit" name="subscribe" value="Сповістити мене">
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
-                    </div>
+                    </div>-->
                 </div>  <!-- end home-content__text -->
 
                 <div class="col-four home-content__counter">
