--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
                     <h3>Вітаємо на сторінці проєкту "Вартовий"</h3>
 
                     <h1 style="font-family: Open Sans; font-size: 36px">
-                    Ми працюємо над розробкою проєкту "Вартовий"
+                    Ми працюємо над розробкою<br> проєкту "Вартовий"
                     </h1>
 
                     <p style="color: #fff">
-                    "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, 
-                    а також навчання дії населення у разі виникнення надзвичайних ситуацій.
+                        "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, 
+                        а також навчання дії населення у разі виникнення надзвичайних ситуацій.
+                        <br>
+                        <img src="/images/map2.png" alt=="Вартовий, плани евакуації" />
                     </p>
 
                    <!-- <div class="home-content__subscribe">
