--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <p style="color: #fff">
                         "Вартовий" - cистема для розробки планів евакуації населених пунктів та районів, 
                         а також навчання дії населення у разі виникнення надзвичайних ситуацій.
-                        <br>
-                        <img src="/images/map2.png" alt=="Вартовий, плани евакуації" />
+                        <br><br>
+                        <img src="/images/map1.png" style="width:70%" alt=="Вартовий, плани евакуації" />
                     </p>
 
                    <!-- <div class="home-content__subscribe">
