--- a/index.html
+++ b/index.html
@@ -157,10 +157,9 @@
                     <h3>Контакти</h3>
                     <p>
                         Юрій Клебан<br>
-                        <a href="mailto:yura@cityguard.info" class="info-email">yura@cityguard.info</a><br>
-                        <br>
-                        Антон Бочаров<br>
-                        <a href="mailto:anton@cityguard.info" class="info-email">anton@cityguard.info</a><br>
+                        Антон Бочаров
+                        <hr>                        
+                        <a href="mailto:cityguard.app@gmail.com" class="info-email">cityguard.app@gmail.com</a><br>
                     </p>
                 </div>
 
