--- a/index.html
+++ b/index.html
@@ -69,13 +69,11 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#open_data">OPEN DATA</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#video">ВІДЕО</a>
                     </li>
-
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#pricing">PRICING</a>
+                        <a class="nav-link page-scroll" href="#presentation">ПРЕЗЕНТАЦІЯ</a>
                     </li>
                 </ul>
             </div>
@@ -93,7 +91,7 @@
                         <div class="text-container">
                             <h1>Вартовий (CityGuard)</h1>
                             <p class="p-large">cистема для розробки планів евакуації населених пунктів та районів, а також навчання дії населення у разі виникнення надзвичайних ситуацій</p>
-                            <a class="btn-solid-lg page-scroll" href="#video"><i class="far fa-file-powerpoint"></i>&nbsp;&nbsp;ПЕРЕГЛЯНУТИ ПРЕЗЕНТАЦІЮ</a><br><br>
+                            <a class="btn-solid-lg page-scroll" href="#presentation"><i class="far fa-file-powerpoint"></i>&nbsp;&nbsp;ПЕРЕГЛЯНУТИ ПРЕЗЕНТАЦІЮ</a><br><br>
                             <a class="btn-solid-lg page-scroll" href="#video"><i class="fas fa-file-video"></i>&nbsp;&nbsp;ПЕРЕГЛЯНУТИ ВІДЕО</a>
                             
                         </div> <!-- end of text-container -->
@@ -131,16 +129,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                         <img class="img-fluid" src="images/customer-logo-3.png" alt="alternative">
-                                </div>
-                                <div class="swiper-slide">
-                                        <img class="img-fluid" src="images/customer-logo-4.png" alt="alternative">
-                                </div>
-                                <div class="swiper-slide">
-                                        <img class="img-fluid" src="images/customer-logo-5.png" alt="alternative">
-                                </div>
-                                <div class="swiper-slide">
-                                        <img class="img-fluid" src="images/customer-logo-6.png" alt="alternative">
-                                </div>
+                                </div>   
                             </div> <!-- end of swiper-wrapper -->
                         </div> <!-- end of swiper container -->
                     </div> <!-- end of slider-container -->
@@ -533,6 +522,29 @@
     </div> <!-- end of basic-1 -->
     <!-- end of details -->
 
+     <!-- Video -->
+     <div id="presentation" class="basic-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Video Preview -->
+                    <div class="image-container">
+                        <iframe src="https://onedrive.live.com/embed?resid=A1340BA71B3F0AA%214991&amp;authkey=!AN_O7FTTrCHTOjg&amp;em=2&amp;wdAr=1.7777777777777777" height="450px" width="800px" frameborder="0">Це вбудований документ <a target="_blank" href="https://office.com">Microsoft Office</a> на платформі <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+
+                    </div> <!-- end of image-container -->
+                    <!-- end of video preview -->
+
+                    <div class="p-heading">
+                        Це презентація проєкту Вартовий для одного з акселераторів. PDF-версію можна переглянути <a href="docs/cityguard_pitch_deck_open_data_unbroken.pdf" target="_blank">тут</a>.
+                    </div>        
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-2 -->
+    <!-- end of video -->
+
+
 
     <!-- Video -->
     <div id="video" class="basic-2">
@@ -554,7 +566,7 @@
                     <!-- end of video preview -->
 
                     <div class="p-heading">
-                        Тут Ви моежет переглянути відео з попереднього хакатону, де було реалізовано частину базових фукнцій проєкту "Вартовий".
+                        Тут Ви можете переглянути відео з попереднього хакатону, де було реалізовано частину базових фукнцій проєкту "Вартовий".
                     </div>        
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
