--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
                     <h2 class="h2-heading">Презентація</h2>
                     <!-- Video Preview -->
                     <div class="image-container">
-                        <iframe src="https://onedrive.live.com/embed?resid=A1340BA71B3F0AA%214991&amp;authkey=!AN_O7FTTrCHTOjg&amp;em=2&amp;wdAr=1.7777777777777777" height="450px" width="800px" frameborder="0">Це вбудований документ <a target="_blank" href="https://office.com">Microsoft Office</a> на платформі <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-
+                      <iframe src="https://onedrive.live.com/embed?resid=A1340BA71B3F0AA%215003&amp;authkey=!AAufB5jjj2jw03A&amp;em=2&amp;wdAr=1.7777777777777777" width="800px" height="450px" frameborder="0">Це вбудований документ <a target="_blank" href="https://office.com">Microsoft Office</a> на платформі <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                     </div> <!-- end of image-container -->
                     <!-- end of video preview -->
 
@@ -539,17 +538,17 @@
 
                     <div class="card">
                         <div class="card-body">
-                            <h4>Юлія Хмарук</h4>
+                            <h4>Юлія Шулик</h4>
                             <img src="images/ky.png" class="img-fluid" alt="" />                                
                             <ul class="list-unstyled">
                                 <li class="media">
                                     <i class="fas fa-check"></i><div class="media-body">Експерт з бізнес планування та розвитку підприємництва</div>
                                 </li>
                                 <li class="media">
-                                    <i class="fas fa-check"></i><div class="media-body">Проректор з навчальної роботи НУ "Острозька академія"</div>
+                                    <i class="fas fa-check"></i><div class="media-body">Помічник ректора зі стратегічного розвитку та забезпечення якості освіти НУ "Острозька академія"</div>
                                 </li>
                                 <li class="media">
-                                    <i class="fas fa-check"></i><div class="media-body">Викладач кафедри фінансів НУ "Острозька академія"</div>
+                                    <i class="fas fa-check"></i><div class="media-body">Доцент кафедри фінансів, обліку і аудиту НУ "Острозька академія"</div>
                                 </li>                               
                             </ul>                          
                         </div>
