--- a/index.html
+++ b/index.html
@@ -424,9 +424,7 @@
                     <!-- Video Preview -->
                     <div class="image-container">
                       <iframe src="https://onedrive.live.com/embed?resid=A1340BA71B3F0AA%215003&amp;authkey=!AAufB5jjj2jw03A&amp;em=2&amp;wdAr=1.7777777777777777" width="800px" height="450px" frameborder="0">Це вбудований документ <a target="_blank" href="https://office.com">Microsoft Office</a> на платформі <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-                    </div> <!-- end of image-container -->
-                    <!-- end of video preview -->
-
+                    </div> 
                     <div class="p-heading">
                         Це презентація проєкту Вартовий для одного з акселераторів. PDF-версію можна переглянути <a href="docs/cityguard_pitch_deck_open_data_unbroken.pdf" target="_blank">тут</a>.
                     </div>        
