--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     </div> <!-- end of card -->
                     <!-- end of card -->
 
-                    <div class="card">
+                   <!-- <div class="card">
                         <div class="card-body">
                             <h4>Антон Бочаров</h4>
                             <img src="images/ab.png" class="img-fluid" alt="" />                             
@@ -514,7 +514,7 @@
                                 </li>                               
                             </ul>                          
                         </div>
-                    </div> <!-- end of card -->
+                    </div>--> <!-- end of card -->
 
                     <div class="card">
                         <div class="card-body">
