--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                         <iframe src="https://onedrive.live.com/embed?resid=A1340BA71B3F0AA%215079&amp;authkey=!AO3iU7jxeWTV4sc&amp;em=2&amp;wdAr=1.7777777777777777" width="800px" height="450px"  frameborder="0">Це вбудований документ <a target="_blank" href="https://office.com">Microsoft Office</a> на платформі <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                     </div> 
                     <div class="p-heading">
-                        Це презентація проєкту Вартовий для одного з акселераторів. PDF-версію можна переглянути <a href="docs/cityguard_pitch_deck.pdf" target="_blank">тут</a>.
+                        Це презентація проєкту Вартовий для одного з акселераторів. PDF-версію можна переглянути <a href="docs/cityguard_pitch_deck_full.pdf" target="_blank">тут</a>.
                     </div>        
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -498,7 +498,7 @@
                     </div> <!-- end of card -->
                     <!-- end of card -->
 
-                   <!-- <div class="card">
+                   <div class="card">
                         <div class="card-body">
                             <h4>Антон Бочаров</h4>
                             <img src="images/ab.png" class="img-fluid" alt="" />                             
@@ -514,7 +514,7 @@
                                 </li>                               
                             </ul>                          
                         </div>
-                    </div>--> <!-- end of card -->
+                    </div> <!-- end of card -->
 
                     <div class="card">
                         <div class="card-body">
